[tool.poetry]
name = "BAMT"
version = "1.1.32"
description = "data modeling and analysis tool based on Bayesian networks"
authors = ["Roman Netrogolov <romius2001@gmail.com>"]

license = "BSD-3-Clause"

classifiers = ["Programming Language :: Python :: 3",
	       "Development Status :: 3 - Alpha",
	       "Topic :: Scientific/Engineering :: Mathematics"]

packages = [
    { include = "bamt_special" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
setuptools = "65.6.3"
numpy = ">=1.24.2"
matplotlib = "*"
pandas = "1.5.2"
gmr = "1.6.2"
scikit-learn = ">=0.24.0"
scipy = "^1.8.0"
pyvis = ">=0.2.1"
missingno = "^0.5.1"
pgmpy = "0.1.20"
pyitlib = "0.2.3"

[tool.poetry.dev-dependencies]
pytest = "7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
